fixed gap

--- a/css/TapNCook.css
+++ b/css/TapNCook.css
@@ -1,7 +1,7 @@
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 5; /* Sit on top */
 
   left: 0% !important;
   top: 82% !important;
@@ -215,9 +215,6 @@ text-align: center;
   body{
     font-family: 'PT Sans', sans-serif;
     margin:0;   
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
   }
 
   #googlePlayFooter {
